--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,15 @@
 		color: red;
 	}
 
+	h1 {
+		font-size: 3em;
+	}
+	h2 {
+		font-size: 2em;
+	}
+	h3 {
+		font-size: 1.5em;
+	}
 	.text-black {
 		color: black;
 	}
