--- a/css/styles.css
+++ b/css/styles.css
@@ -51,22 +51,26 @@
 		background-color: gray;
 	}
 
+	#spacer, .border-none{
+		border: none;
+	}
 
 	.footer, .push {
 		height: 100px;
 	}
 
 	.carousel-inner > .item > img {
-    	max-width: 100%;
-    	height: 50%;
-    	padding: 5%;
+	    margin: 0 auto auto auto;
 	}
 	.carousel .item {
 		/*background-color: gray;*/
 		/*height: 50%;*/
 	}
-	.carousel-padding {
-		margin: 5px 5px 5px 5px;
+	.carousel-inner {
+		max-height: 200px;
+	}
+	.carousel-indicators {
+		bottom: -50px;
 	}
 
 	.well-padding {
@@ -84,3 +88,18 @@
 		margin-left: auto;
 		margin-right: auto;
 	}
+
+	/* Smaller than standard 960 (devices and browsers) */
+	@media only screen and (max-width: 959px) {}
+
+	/* Tablet Portrait size to standard 960 (devices and browsers) */
+	@media only screen and (min-width: 768px) and (max-width: 959px) {}
+
+	/* All Mobile Sizes (devices and browser) */
+	@media only screen and (max-width: 767px) {}
+
+	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+	@media only screen and (min-width: 480px) and (max-width: 767px) {}
+
+	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+	@media only screen and (max-width: 479px) {}
